<?xml version="1.0" encoding="utf-8"?>
<resources>

     <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_capital_off">OFF</string>
    <string name="user_center_exit_login_txt">退出登录</string>
    <string name="user_center_name_txt">昵称: </string>
    <string name="user_center_integral_txt">我的积分: </string>
    <string name="app_name">安卓手机助手</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_guide_page">指导页</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_show_cars">ShowCars</string>
    <string name="title_activity_car_detail">CarDetail</string>
    <string name="title_activity_show_parts">ShowParts</string>
    <string name="title_activity_login">用户登录</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_show_serial">ShowSerial</string>
    <string name="title_activity_reg_first">RegFirst</string>
    <string name="title_activity_reg_last">RegLast</string>
    <string name="title_activity_reg_next">RegNext</string>
    <string name="title_activity_reg_psw_set">RegPswSet</string>
    <string name="title_activity_show_indent">ShowIndent</string>
    <string name="title_activity_show_collect">ShowCollect</string>
    <string name="title_activity_show_detail">ShowDetail</string>
    <string name="title_activity_wait_income_goods">WaitIncomeGoods</string>
    <string name="title_activity_user_info_manage">UserInfoManage</string>
    <string name="title_activity_update_user_info">UpdateUserInfo</string>
    <string name="title_activity_update_pwd">UpdatePwd</string>
    <string name="title_activity_my_indent">MyIndent</string>
    <string name="title_activity_user_center">用户中心</string>
    <string name="app_description" />
    <string name="app_del_name">程序卸载</string>
    <string name="pref_comment_words_summary">随机选择下列感谢语(空格间隔)</string>
    <string name="pref_watch_exclude_words_summary">不拆开包含这些文字的红包(空格间隔)</string>
    <string name="preference">偏好设置</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="weather_icon_name">天气</string>
    <string name="hongbao_remind">"1、点击\"抢\"按钮
2、在辅助功能中开启\"安卓助手\"
3、点击右上角\"自动拆\"即可拆开红包，否则只能跳出微信红包界面
4、坐等红包进账"</string>
    <string name="hongbao_auto_open">自动拆</string>
    <string name="hongbao_record_txt"><u>记录</u></string>
    <string name="hongbao_setting_txt"><u>设置</u></string>
    <string name="appsmanager_text_loading">正在加载已安装应用列表</string>
    <string name="filemanager_app_name">天天文件夹</string>
    <string name="filemanager_confirm">确定</string>
    <string name="filemanager_menu_item_search">搜索</string>
    <string name="filemanager_operation_create_folder">新建文件夹</string>
    <string name="filemanager_menu_item_sort">排序</string>
    <string name="filemanager_menu_item_sort_name">名称</string>
    <string name="filemanager_menu_item_sort_size">大小</string>
    <string name="filemanager_menu_item_sort_date">时间</string>
    <string name="filemanager_menu_item_sort_type">类型</string>
    <string name="filemanager_operation_favorite">收藏</string>
    <string name="filemanager_operation_unfavorite">取消收藏</string>
    <string name="filemanager_operation_copy">复制</string>
    <string name="filemanager_operation_copy_path">复制路径</string>
    <string name="filemanager_operation_paste">粘贴</string>
    <string name="filemanager_operation_move">剪切</string>
    <string name="filemanager_default_primary_folder">/mnt/sdcard</string>
    <string name="filemanager_operation_send">发送</string>
    <string name="filemanager_operation_rename">重命名</string>
    <string name="filemanager_operation_delete">删除</string>
    <string name="filemanager_operation_info">详情</string>
    <string name="filemanager_operation_cancel">取消</string>
    <string name="filemanager_operation_refresh">刷新</string>
    <string name="filemanager_operation_selectall">全选</string>
    <string name="filemanager_operation_cancel_selectall">取消全选</string>
    <string name="filemanager_operation_show_sys">显示点文件和隐藏文件</string>
    <string name="filemanager_operation_hide_sys">隐藏点文件和隐藏文件</string>
    <string name="filemanager_cancel">取消</string>
    <string name="filemanager_no_file">没有文件</string>
    <string name="filemanager_tab_category">分类浏览</string>
    <string name="filemanager_tab_sd">文件管理</string>
    <string name="filemanager_tab_remote">远程管理</string>
    <string name="filemanager_sd_folder">SD卡</string>
    <string name="filemanager_category_all">所有</string>
    <string name="filemanager_category_music">音乐</string>
    <string name="filemanager_category_video">视频</string>
    <string name="filemanager_category_picture">图片</string>
    <string name="filemanager_category_theme">主题</string>
    <string name="filemanager_category_document">文档</string>
    <string name="filemanager_category_zip">压缩包</string>
    <string name="filemanager_category_apk">安装包</string>
    <string name="filemanager_category_other">其它</string>
    <string name="filemanager_category_favorite">收藏夹</string>
    <string name="filemanager_operation_rename_message">请输入新名称</string>
    <string name="filemanager_operation_create_folder_message">请输入文件夹名称</string>
    <string name="filemanager_operation_delete_confirm_message">确认删除?</string>
    <string name="filemanager_new_folder_name">新建文件夹</string>
    <string name="filemanager_sd_card_size">SD卡:%1$s</string>
    <string name="filemanager_sd_card_available">可用:%1$s</string>
    <string name="filemanager_file_info_location">位置:</string>
    <string name="filemanager_file_info_size">大小:</string>
    <string name="filemanager_file_info_modified">时间:</string>
    <string name="filemanager_file_info_canread">可读:</string>
    <string name="filemanager_file_info_canwrite">可写:</string>
    <string name="filemanager_file_info_ishidden">隐藏:</string>
    <string name="filemanager_yes">是</string>
    <string name="filemanager_no">否</string>
    <string name="filemanager_operation_deleting">正在删除</string>
    <string name="filemanager_operation_pasting">正在复制</string>
    <string name="filemanager_operation_moving">正在移动</string>
    <string name="filemanager_confirm_know">知道了</string>
    <string name="filemanager_install_successful">安装成功</string>
    <string name="filemanager_install_failed">安装失败</string>
    <string name="filemanager_error_info_cant_send_folder">不能发送文件夹</string>
    <string name="filemanager_added_favorite">已加入收藏夹</string>
    <string name="filemanager_removed_favorite">已从收藏夹移除</string>
    <string name="filemanager_fail_to_create_folder">创建文件夹失败，文件夹已存在。</string>
    <string name="filemanager_fail_to_rename">重命名失败失败，可能使用该名称的文件或文件夹已存在。</string>
    <string name="filemanager_enable_sd_card">无可用SD卡，请插入或连接SD卡</string>
    <string name="filemanager_start_server">启动服务</string>
    <string name="filemanager_stop_server">停止服务</string>
    <string name="filemanager_notif_server_starting">远程管理服务已启动</string>
    <string name="filemanager_notif_title">远程管理服务正在运行</string>
    <string name="filemanager_storage_warning">外部存储不可用.</string>
    <string name="filemanager_wifi_state">WiFi状态</string>
    <string name="filemanager_instruction_pre">启动后可以从电脑端远程管理手机文件</string>
    <string name="filemanager_instruction">请在“我的电脑”地址栏中输入：</string>
    <string name="filemanager_no_wifi">无WiFi网络</string>
    <string name="filemanager_no_wifi_hint">无WiFi网络,点击以查看WiFi设置</string>
    <string name="filemanager_search_title">搜索文件</string>
    <string name="filemanager_search_hint">输入部分或全部文件名</string>
    <string name="filemanager_file_size">%d 字节</string>
    <string name="filemanager_dialog_select_type">选择文件类型</string>
    <string name="filemanager_dialog_type_text">文本</string>
    <string name="filemanager_dialog_type_audio">音频</string>
    <string name="filemanager_dialog_type_video">视频</string>
    <string name="filemanager_dialog_type_image">图像</string>
    <string name="filemanager_favorite_photo">照片</string>
    <string name="filemanager_favorite_sdcard">SD卡</string>
    <string name="filemanager_favorite_root">根目录</string>
    <string name="filemanager_favorite_screen_cap">MIUI截屏</string>
    <string name="filemanager_favorite_ringtone">铃声</string>
    <string name="filemanager_multi_select_title">已选择 %1$s 个</string>
    <string name="filemanager_menu_setting">设置</string>
    <string name="filemanager_menu_exit">退出</string>
    <string name="filemanager_preference_title">常规设置</string>
    <string name="filemanager_pref_primary_folder">主页文件夹</string>
    <string name="filemanager_pref_read_root">读取根目录</string>
    <string name="filemanager_pref_show_real_path">显示真实路径</string>
    <string name="filemanager_pref_primary_folder_summary">程序启动时显示的文件夹，当前路径为%1$s</string>
    <string name="filemanager_pref_show_real_path_summary">在导航栏中显示真实路径</string>
    <string name="filemanager_app_id">35</string>
    <string name="filemanager_url">http://www.54tool.com/server/initConfig.ashx</string>
    <string name="filemanager_os">aphone</string>

</resources>
