<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/file_browse_frame" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:id="@id/navigation_bar" android:background="@drawable/filemanager_secondary_title_background" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <LinearLayout android:gravity="center_vertical" android:id="@id/current_path_pane" android:background="@drawable/filemanager_path_pane_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxWidth="300.0dip">
                <LinearLayout android:id="@id/current_path_scroller" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:layout_weight="1.0">
                    <TextView android:ellipsize="start" android:id="@id/current_path_view" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" style="?android:attr/textAppearanceMedium" />
                </LinearLayout>
                <ImageView android:layout_gravity="center_vertical" android:id="@id/path_pane_arrow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/filemanager_arrow_down" />
            </LinearLayout>
        </LinearLayout>
        <ImageView android:layout_gravity="center|right" android:id="@id/path_pane_up_level" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:src="@drawable/filemanager_path_up_level" />
    </LinearLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <ListView android:id="@id/file_path_list" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:headerDividersEnabled="true" android:footerDividersEnabled="true" />
        <ListView android:id="@id/favorite_list" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:headerDividersEnabled="true" android:footerDividersEnabled="true" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/empty_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/filemanager_empty_icon" />
            <TextView android:textSize="27.0px" android:textColor="#ffe2e2e2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/filemanager_no_file" android:singleLine="true" />
        </LinearLayout>
        <ScrollView android:id="@id/dropdown_navigation" android:background="@drawable/filemanager_dropdown" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:overScrollMode="never">
            <LinearLayout android:orientation="vertical" android:id="@id/dropdown_navigation_list" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </ScrollView>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/sd_not_available_page" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="25.0px" android:src="@drawable/filemanager_sd_not_available" />
            <TextView android:textSize="22.0px" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/filemanager_enable_sd_card" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/category_page" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:id="@id/category_buttons" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                    <LinearLayout android:id="@id/category_music" android:background="@drawable/filemanager_category_button_left" style="@style/filemanager_CategoryButtonStyle">
                        <ImageView android:src="@drawable/filemanager_category_icon_music" style="@style/filemanager_CategoryButtonIconStyle" />
                        <TextView android:text="@string/filemanager_category_music" style="@style/filemanager_CategoryButtonTextStyle" />
                        <TextView android:id="@id/category_music_count" style="@style/filemanager_CategoryButtonCountTextStyle" />
                    </LinearLayout>
                    <LinearLayout android:id="@id/category_video" android:background="@drawable/filemanager_category_button_middle" style="@style/filemanager_CategoryButtonStyle">
                        <ImageView android:src="@drawable/filemanager_category_icon_video" style="@style/filemanager_CategoryButtonIconStyle" />
                        <TextView android:text="@string/filemanager_category_video" style="@style/filemanager_CategoryButtonTextStyle" />
                        <TextView android:id="@id/category_video_count" style="@style/filemanager_CategoryButtonCountTextStyle" />
                    </LinearLayout>
                    <LinearLayout android:id="@id/category_picture" android:background="@drawable/filemanager_category_button_right" style="@style/filemanager_CategoryButtonStyle">
                        <ImageView android:src="@drawable/filemanager_category_icon_picture" style="@style/filemanager_CategoryButtonIconStyle" />
                        <TextView android:text="@string/filemanager_category_picture" style="@style/filemanager_CategoryButtonTextStyle" />
                        <TextView android:id="@id/category_picture_count" style="@style/filemanager_CategoryButtonCountTextStyle" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                    <LinearLayout android:id="@id/category_theme" android:background="@drawable/filemanager_category_button_left" style="@style/filemanager_CategoryButtonStyle">
                        <ImageView android:src="@drawable/filemanager_category_icon_theme" style="@style/filemanager_CategoryButtonIconStyle" />
                        <TextView android:text="@string/filemanager_category_theme" style="@style/filemanager_CategoryButtonTextStyle" />
                        <TextView android:id="@id/category_theme_count" style="@style/filemanager_CategoryButtonCountTextStyle" />
                    </LinearLayout>
                    <LinearLayout android:id="@id/category_document" android:background="@drawable/filemanager_category_button_middle" style="@style/filemanager_CategoryButtonStyle">
                        <ImageView android:src="@drawable/filemanager_category_icon_document" style="@style/filemanager_CategoryButtonIconStyle" />
                        <TextView android:text="@string/filemanager_category_document" style="@style/filemanager_CategoryButtonTextStyle" />
                        <TextView android:id="@id/category_document_count" style="@style/filemanager_CategoryButtonCountTextStyle" />
                    </LinearLayout>
                    <LinearLayout android:id="@id/category_zip" android:background="@drawable/filemanager_category_button_right" style="@style/filemanager_CategoryButtonStyle">
                        <ImageView android:src="@drawable/filemanager_category_icon_zip" style="@style/filemanager_CategoryButtonIconStyle" />
                        <TextView android:text="@string/filemanager_category_zip" style="@style/filemanager_CategoryButtonTextStyle" />
                        <TextView android:id="@id/category_zip_count" style="@style/filemanager_CategoryButtonCountTextStyle" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                    <LinearLayout android:id="@id/category_apk" android:background="@drawable/filemanager_category_button_left" style="@style/filemanager_CategoryButtonStyle">
                        <ImageView android:src="@drawable/filemanager_category_icon_apk" style="@style/filemanager_CategoryButtonIconStyle" />
                        <TextView android:text="@string/filemanager_category_apk" style="@style/filemanager_CategoryButtonTextStyle" />
                        <TextView android:id="@id/category_apk_count" style="@style/filemanager_CategoryButtonCountTextStyle" />
                    </LinearLayout>
                    <LinearLayout android:id="@id/category_favorite" android:background="@drawable/filemanager_category_button_middle" style="@style/filemanager_CategoryButtonStyle">
                        <ImageView android:src="@drawable/filemanager_category_icon_favorite" style="@style/filemanager_CategoryButtonIconStyle" />
                        <TextView android:text="@string/filemanager_category_favorite" style="@style/filemanager_CategoryButtonTextStyle" />
                        <TextView android:id="@id/category_favorite_count" style="@style/filemanager_CategoryButtonCountTextStyle" />
                    </LinearLayout>
                    <LinearLayout android:background="@drawable/filemanager_category_button_right" style="@style/filemanager_CategoryButtonStyle" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:layout_gravity="bottom" android:orientation="vertical" android:background="@drawable/filemanager_information_bg" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0px" android:layout_marginBottom="5.0dip">
                    <TextView android:id="@id/sd_card_capacity" android:drawableLeft="@drawable/filemanager_sd_card_icon" style="@style/filemanager_InformationTextStyle" />
                    <TextView android:id="@id/sd_card_available" android:layout_marginLeft="10.0dip" android:drawableLeft="@drawable/filemanager_sd_card_available_icon" style="@style/filemanager_InformationTextStyle" />
                </LinearLayout>
                <dyhelper.com.filemanager.explorer.CategoryBar android:layout_gravity="center" android:id="@id/category_bar" android:layout_width="fill_parent" android:layout_height="35.0px" android:layout_marginBottom="5.0dip" />
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0px" android:layout_marginBottom="5.0dip">
                        <TextView android:id="@id/category_legend_music" android:drawableLeft="@drawable/filemanager_legend_music" style="@style/filemanager_CategoryLegendStyle" />
                        <TextView android:id="@id/category_legend_video" android:drawableLeft="@drawable/filemanager_legend_video" style="@style/filemanager_CategoryLegendStyle" />
                        <TextView android:id="@id/category_legend_picture" android:drawableLeft="@drawable/filemanager_legend_picture" style="@style/filemanager_CategoryLegendStyle" />
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0px" android:layout_marginBottom="5.0dip">
                        <TextView android:id="@id/category_legend_theme" android:drawableLeft="@drawable/filemanager_legend_theme" style="@style/filemanager_CategoryLegendStyle" />
                        <TextView android:id="@id/category_legend_document" android:drawableLeft="@drawable/filemanager_legend_document" style="@style/filemanager_CategoryLegendStyle" />
                        <TextView android:id="@id/category_legend_zip" android:drawableLeft="@drawable/filemanager_legend_zip" style="@style/filemanager_CategoryLegendStyle" />
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0px" android:layout_marginBottom="5.0dip">
                        <TextView android:id="@id/category_legend_apk" android:drawableLeft="@drawable/filemanager_legend_apk" style="@style/filemanager_CategoryLegendStyle" />
                        <TextView android:id="@id/category_legend_other" android:drawableLeft="@drawable/filemanager_legend_other" style="@style/filemanager_CategoryLegendStyle" />
                        <TextView style="@style/filemanager_CategoryLegendStyle" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
    <LinearLayout android:id="@id/moving_operation_bar" android:visibility="gone" style="@style/filemanager_BottomButtonBar">
        <Button android:id="@id/button_moving_confirm" android:text="@string/filemanager_confirm" style="@style/filemanager_BottomButton.Left" />
        <Button android:id="@id/button_moving_cancel" android:text="@string/filemanager_operation_cancel" style="@style/filemanager_BottomButton.Right" />
    </LinearLayout>
</LinearLayout>