<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/serverTopAdView" android:layout_width="fill_parent" android:layout_height="60.0dip" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <TextView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/filemanager_wifi_state" android:singleLine="true" style="?android:attr/textAppearanceMedium" />
        <TextView android:layout_gravity="center_horizontal" android:id="@id/wifi_state" android:padding="5.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/filemanager_wifi_state" android:singleLine="true" style="?android:attr/textAppearanceSmall" />
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/wifi_state_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/filemanager_wifi_state4" />
    </LinearLayout>
    <LinearLayout android:gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_gravity="center_horizontal" android:id="@id/instruction_pre" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/filemanager_instruction_pre" style="?android:attr/textAppearanceSmall" />
        <TextView android:layout_gravity="center_horizontal" android:id="@id/instruction" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/filemanager_instruction" style="?android:attr/textAppearanceSmall" />
        <TextView android:textSize="32.0px" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/ip_address" android:background="@drawable/filemanager_ipaddress_bg" android:paddingLeft="15.0px" android:paddingRight="15.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0px" android:minWidth="150.0px" android:singleLine="true" />
        <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/start_stop_button" android:background="@drawable/filemanager_btn_bottom_last" android:layout_width="274.0px" android:layout_height="wrap_content" android:layout_marginTop="20.0px" android:layout_marginBottom="20.0px">
            <TextView android:textSize="28.0px" android:gravity="center" android:id="@id/start_stop_button_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:drawablePadding="10.0px" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/serverBottomAdView" android:layout_width="fill_parent" android:layout_height="60.0dip" />
</LinearLayout>