<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/id_top" android:background="#ff1cc991" android:paddingBottom="22.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:id="@id/id_user_center_top" android:paddingLeft="18.0dip" android:paddingRight="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="14.0dip">
            <ImageView android:background="@null" android:layout_width="28.0dip" android:layout_height="28.0dip" android:src="@mipmap/ic_back" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:onClick="onUserCenterBack" />
            <TextView android:textSize="14.0sp" android:textColor="@android:color/white" android:id="@+id/id_setting_pwd" android:background="@drawable/user_center_round" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/user_center_exit_login_txt" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/id_me_info_ll" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:layout_below="@id/id_user_center_top">
            <dyhelper.com.view.CircleImageView android:id="@+id/id_me_img" android:layout_width="58.0dip" android:layout_height="58.0dip" android:layout_marginLeft="16.0dip" />
            <RelativeLayout android:id="@id/id_me_name_ll" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="14.0dip" android:layout_toRightOf="@id/id_me_img">
                <TextView android:textSize="18.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/id_tv_nameTxt" android:layout_width="wrap_content" android:layout_height="30.0dip" android:text="@string/user_center_name_txt" />
                <TextView android:textSize="18.0sp" android:textColor="@android:color/white" android:id="@id/id_tv_username" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Lee912345" android:layout_toRightOf="@id/id_tv_nameTxt" android:layout_centerVertical="true" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/id_me_integral_ll" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/id_me_name_ll" android:layout_alignLeft="@id/id_me_name_ll">
                <TextView android:textSize="12.0sp" android:textColor="@android:color/white" android:id="@id/id_tv_integralTxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/user_center_integral_txt" android:layout_centerVertical="true" />
                <TextView android:textSize="12.0sp" android:textColor="@android:color/white" android:id="@id/id_tv_integral" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="2688" android:layout_toRightOf="@id/id_tv_integralTxt" android:layout_centerVertical="true" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
    <dyhelper.com.view.LineListView android:id="@+id/id_listview" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="4.0dip" android:listSelector="@android:color/transparent" android:divider="#55aaaaaa" android:dividerHeight="1.0px" android:layout_below="@id/id_top" />
</RelativeLayout>